--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
       run: ./gradlew build
     
     - name: Debug
-      run: ls -lrtha
+      run: ls -lrtha ./build
       
     - name: Build and Publish docker image
       uses: mr-smithers-excellent/docker-build-push@v6
