--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,14 +38,12 @@ jobs:
 
     - name: Build with Gradle Wrapper
       run: ./gradlew build
-    
-    - name: Debug
-      run: ls -lrtha ./build/libs
       
     - name: Build and Publish docker image
       uses: mr-smithers-excellent/docker-build-push@v6
       with:
         image: gilbertomaga/demo-app
+        tag: v1
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
